testdata/baselines/reference/submodule/compiler/strictOptionalProperties4.errors.txt
a.js(7,3): error TS2339: Property 'foo' does not exist on type '{}'.
a.js(10,3): error TS2339: Property 'foo' does not exist on type '{}'.


==== a.js (2 errors) ====
    /**
     * @typedef Foo
     * @property {number} [foo]
     */
    
    const x = /** @type {Foo} */ ({});
    x.foo; // number | undefined
      ~~~
!!! error TS2339: Property 'foo' does not exist on type '{}'.
    
    const y = /** @type {Required<Foo>} */ ({});
    y.foo; // number
      ~~~
!!! error TS2339: Property 'foo' does not exist on type '{}'.
    